Update to accountsBalance
